maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: too many arguments for method getDirection: ()plm.universe.Direction
		getDirection(Direction.NORTH)
                            ^Escaper:6: error: Unit does not take parameters
			avance()()
                                ^Escaper:8: error: Unit does not take parameters
		droite()()
                        ^