maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	while (!(getY()==0)) {
		getDirection(Direction.NORTH)
		while (!estFaceMur) {
			avance()()
		}
		droite()()
	}
}




	/*while (!estSurBiscuit) {
		gauche()
		while (estFaceMur) {
			droite()
		}
		avance()
	}
	prendBiscuit()*/